--- a/cartsproducts.html
+++ b/cartsproducts.html
@@ -52,6 +52,6 @@
 
 
     <script src="js/carts.js"></script>
-    <!-- <script src="js/script.js"></script> -->
+    <script src="js/script.js"></script>
 </body>
 </html>
